<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SampleDBProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="account_number">Account Number</string>
    <string name="account_name">Account Name</string>
    <string name="save">Save</string>
    <string name="get_info">Get Info</string>
    <string name="str_account_name">Account Name</string>
    <string name="str_account_number">Account Number</string>
</resources>
